tests/snapshots/e2e__fail-on-any.snap
---
source: tests/e2e.rs
expression: "run(\"command-rot\", &[\"--fail-on\", \"any\"])"
---
$ stilltrue --fail-on any
CLAUDE.md:1:6  rot  command `make demo` has no target in Makefile
                    likely broke in <sha> "split demo into seed+serve" · <when>
                    did you mean: make seed, make serve?

stilltrue: 1 rot, 0 lie

exit: 1
