tests/snapshots/e2e__fence-near-miss.snap
---
source: tests/e2e.rs
expression: "run(\"fence-near-miss\", &[\"--strict\"])"
---
$ stilltrue --strict
CLAUDE.md:10:1  rot  command `make demo` has no target in Makefile
                     likely broke in <sha> "drop the demo target" · <when>
                     did you mean: make seed?

stilltrue: 1 rot, 0 lie

exit: 1
