tests/snapshots/e2e__history-cut-rename.snap
---
source: tests/e2e.rs
expression: "run(\"history-cut-rename\", &[])"
---
$ stilltrue 
stilltrue: no findings

exit: 0
