tests/snapshots/e2e__nested-worktree.snap
---
source: tests/e2e.rs
expression: "run(\"nested-worktree\", &[\"--strict\", \"--summary\"])"
---
$ stilltrue --strict --summary
stilltrue: summary (complete)
  documents   1 matched · 1 read · 0 unreadable
  claims      1 extracted · 0 ignored · 0 true · 1 broken · 0 skipped · 0 ambiguous
  gate        1 rot · 0 lie reported · 0 lie not reported · 0 abstained · 0 history failed
  baseline    0 suppressed
  history     complete · 1 searches · 5 git processes
stilltrue: 1 finding(s) reported (1 rot, 0 lie). Checked 1 document(s).
CLAUDE.md:1:23  rot  symbol `fold_events()` is not defined anywhere
                     likely broke in <sha> "rename fold_events to reduce_events" · <when>
                     did you mean: events, reduce_events?

stilltrue: 1 rot, 0 lie

exit: 1
